--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-VITE_GEMINI_API_KEY=AIzaSyDevbJIaBRw8dPIdnIBIyB-VxlO2QU6ARo
+VITE_GEMINI_API_KEY=
 VITE_API_URL=http://localhost:3000
-VITE_FIREBASE_API_KEY=AIzaSyChVZEj7iIlWfUqX-OaoxmYGttBuDiT1KE
-VITE_FIREBASE_AUTH_DOMAIN=aistudy-planner.firebaseapp.com
-VITE_FIREBASE_PROJECT_ID=aistudy-planner
-VITE_FIREBASE_STORAGE_BUCKET=aistudy-planner.firebasestorage.app
-VITE_FIREBASE_MESSAGING_SENDER_ID=713085018491
-VITE_FIREBASE_APP_ID=1:713085018491:web:8f91f4b09e1491fcc55dde
-VITE_FIREBASE_MEASUREMENT_ID=G-4KMTF4H9QM
+VITE_FIREBASE_API_KEY=
+VITE_FIREBASE_AUTH_DOMAIN=
+VITE_FIREBASE_PROJECT_ID=
+VITE_FIREBASE_STORAGE_BUCKET=
+VITE_FIREBASE_MESSAGING_SENDER_ID=
+VITE_FIREBASE_APP_ID=1:
+VITE_FIREBASE_MEASUREMENT_ID=
